--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -91,9 +91,15 @@ ENV SYMFONY_VERSION ${SYMFONY_VERSION}
 # Download the Symfony skeleton and leverage Docker cache layers
 RUN composer create-project "${SKELETON} ${SYMFONY_VERSION}" . --stability=$STABILITY --prefer-dist --no-dev --no-progress --no-interaction; \
 	composer clear-cache
-RUN docker-php-ext-install pdo_mysql
 ###> recipes ###
+###> doctrine/doctrine-bundle ###
+RUN apk add --no-cache --virtual .pgsql-deps postgresql-dev; \
+	docker-php-ext-install -j$(nproc) pdo_pgsql; \
+	apk add --no-cache --virtual .pgsql-rundeps so:libpq.so.5; \
+	apk del .pgsql-deps
+###< doctrine/doctrine-bundle ###
 ###< recipes ###
+RUN docker-php-ext-install pdo_mysql
 
 COPY . .
 
