--- a/backend/.env
+++ b/backend/.env
@@ -26,3 +26,7 @@ APP_SECRET=0b1a011f60484115f57a9cb9ef16be6a
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:61414/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
